--- a/css/styles.css
+++ b/css/styles.css
@@ -221,9 +221,10 @@ p{
     margin: 50px;
     border-radius: 10px;
     text-align: center;
-    margin-left: 340px;
+    margin-left: 135px;
     margin-right: 50px;
     right: -1000px;
+    padding-right: 15px;
 }
 
 .Doe-2{
@@ -236,7 +237,7 @@ p{
 
 .Latest_post{
     text-align: start;
-    margin-left: 220px;
+    margin-left: 30px;
     padding-top: 0px;
 }
 
