--- a/css/styles.css
+++ b/css/styles.css
@@ -452,3 +452,15 @@ textarea {
 .imagen87{
     padding-left: 80px;
 }
+
+
+
+.mapa{
+    padding: 20px;
+    background: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-left: 200px;
+}
